Add 2 recipes and edit alfredo.html

--- a/recipes/alfredo.html
+++ b/recipes/alfredo.html
@@ -7,5 +7,34 @@
 <body>
     <h1>Chicken and Broccoli Alfredo</h1>
     <img src="../images/alfredo.jpg" alt="Chicken Alfredo on a plate">
+    <h2>Description</h2>
+    <p>Easy and delicious pasta recipe for broccoli lovers</p>
+    <p>Original recipe from <a href="https://tasty.co/recipe/chicken-and-broccoli-alfredo">Tasty.co</a></p>
+
+    <h2>Ingredients</h2>
+    <ul>
+        <li>Penne pasta</li>
+        <li>Broccoli</li>
+        <li>Chicken breasts</li>
+        <li>Heavy cream</li>
+        <li>Parmesan cheese</li>
+        <li>Garlic</li>
+        <li>Olive oil</li>
+        <li>Butter</li>
+        <li>Spices (salt, black pepper, nutmeg, red pepper flake)</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>Cook pasta in salted water for 8 minutes</li>
+        <li>Add broccoli to pasta and simmer for 4 minutes with the lid on</li>
+        <li>Strain the pasta and broccoli in a colander</li>
+        <li>Heat the olive oil in the pot over medium-high heat, and add the chicken. Season the chicken with season salt and pepper</li>
+        <li>Once the chicken is cooked through, remove it from the pot and set aside.</li>
+        <li>Add the butter to the pot, and melt it. Once butter is fully melted, add in garlic and stir continuously for 10 seconds</li>
+        <li>Add the heavy cream, salt, pepper, and nutmeg. Stir often, and cook until sauce starts to bubble slightly</li>
+        <li>Add in Parmesan cheese and stir until the sauce thickens</li>
+        <li>Add in the cooked chicken, pasta, and broccoli, and stir until fully combined.</li>
+        <li>Top with Parmesan cheese or red chili flakes</li>
+    </ol>
 </body>
 </html>
