Edit Stirfry.html, chorizopasta.htlm and Index.html

--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/alfredo.html">Chicken and Broccoli Alfredo</a>
-        <a href="recipes/chorizopasta.html">Chorizo Pasta</a>
-        <a href="recipes/stirfry.html">Chicken & Veggie Stir-Fry</a>
+        <ul>
+        <li><a href="recipes/alfredo.html">Chicken and Broccoli Alfredo</a></li>
+        <li><a href="recipes/chorizopasta.html">Chorizo Pasta</a></li>
+        <li><a href="recipes/stirfry.html">Chicken & Veggie Stir-Fry</a></li>
     </body>
 </html>
