--- a/recipes/alfredo.html
+++ b/recipes/alfredo.html
@@ -13,28 +13,25 @@
 
     <h2>Ingredients</h2>
     <ul>
-        <li>Penne pasta</li>
+        <li>Chicken breast</li>
         <li>Broccoli</li>
-        <li>Chicken breasts</li>
-        <li>Heavy cream</li>
-        <li>Parmesan cheese</li>
+        <li>Mushrooms</li>
         <li>Garlic</li>
+        <li>Ginger</li>
+        <li>Soy sauce</li>
         <li>Olive oil</li>
-        <li>Butter</li>
+        <li>Sesame oil</li>
+        <li>Brown sugar</li>
         <li>Spices (salt, black pepper, nutmeg, red pepper flake)</li>
     </ul>
     <h2>Steps</h2>
     <ol>
-        <li>Cook pasta in salted water for 8 minutes</li>
-        <li>Add broccoli to pasta and simmer for 4 minutes with the lid on</li>
-        <li>Strain the pasta and broccoli in a colander</li>
-        <li>Heat the olive oil in the pot over medium-high heat, and add the chicken. Season the chicken with season salt and pepper</li>
-        <li>Once the chicken is cooked through, remove it from the pot and set aside.</li>
-        <li>Add the butter to the pot, and melt it. Once butter is fully melted, add in garlic and stir continuously for 10 seconds</li>
-        <li>Add the heavy cream, salt, pepper, and nutmeg. Stir often, and cook until sauce starts to bubble slightly</li>
-        <li>Add in Parmesan cheese and stir until the sauce thickens</li>
-        <li>Add in the cooked chicken, pasta, and broccoli, and stir until fully combined.</li>
-        <li>Top with Parmesan cheese or red chili flakes</li>
+        <li>In a large pan on medium-high heat, add 1 tablespoon of oil. Once the oil is hot, add chicken, season with salt and pepper, and sauté until cooked through and browned. Remove cooked chicken from pan and set aside</li>
+        <li>In the same pan, heat 1 tablespoon of oil and add mushrooms. When the mushrooms start to soften, add broccoli florets and stir-fry until the broccoli is tender. Remove cooked mushrooms and broccoli from the pan and set aside.</li>
+        <li>Add 1 tablespoon of oil to the pan and sauté garlic and ginger until fragrant. Add the remaining sauce ingredients and stir until smooth.</li>
+        <li>Return the chicken and vegetables to the saucy pan, stir until heated through.</li>
+        <li>Serve with hot rice or noodles.</li>
+        <li>Enjoy!</li>
     </ol>
 </body>
 </html>
