--- a/recipes/chorizopasta.html
+++ b/recipes/chorizopasta.html
@@ -8,5 +8,25 @@
 <body>
     <h1>Chorizopasta</h1>
     <img src="../images/chorizo.jpg" alt="Chorizopasta on a plate">
+    <h2>Description</h2>
+    <p>Spicy pasta dish. Easy and delicious!</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>Penne pasta</li>
+        <li>Red bell pepper </li>
+        <li>Green bell pepper</li>
+        <li>Onion</li>
+        <li>Chorizo</li>
+        <li>Valio Koskenlaskija</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>Cook pasta in salted water</li>
+        <li>Add chorizo, bell peppers and onions to the pan and cook until bell peppers soften a little</li>
+        <li>Add Koskenlaskija to the pan and stir until sauce starts to bubble</li>
+        <li>Strain pasta and add to the sauce, and stir until combined</li>
+        <li>Enjoy!</li>
+
+    </ol>
 </body>
 </html>
