--- a/recipes/stirfry.html
+++ b/recipes/stirfry.html
@@ -7,5 +7,34 @@
 <body>
     <h1>Chicken and Veggie Stir-Fry</h1>
     <img src="../images/stirfry.jpg" alt="Chicken and Veggie Stri-Fry">
+    <h2>Description</h2>
+    <p>Magic of a Chinese takeout right in your very own kitchen</p>
+    <p>Original recipe from <a href="https://tasty.co/recipe/chicken-veggie-stir-fry">Tasty.co</a></p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>Chicken breasts</li>
+        <li>Broccoli</li>
+        <li>Mushrooms</li>
+        <li>Garlic</li>
+        <li>Ginger</li>
+        <li>Soy sauce</li>
+        <li>Sesame oil</li>
+        <li>Olive oil</li>
+        <li>Brown sugar</li>
+        <li>Chicken broth</li>
+        <li>Flour</li>
+        <li>Salt, pepper</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>In a large pan on medium-high heat, add 1 tablespoon of oil. Once the oil is hot, add chicken, season with salt and pepper, and sauté until cooked through and browned. Remove cooked chicken from pan and set aside.</li>
+        <li>In the same pan, heat 1 tablespoon of oil and add mushrooms. When the mushrooms start to soften, add broccoli florets and stir-fry until the broccoli is tender. Remove cooked mushrooms and broccoli from the pan and set aside.</li>
+        <li>Add 1 tablespoon of oil to the pan and sauté garlic and ginger until fragrant. Add the remaining sauce ingredients and stir until smooth.
+        </li>
+        <li>Return the chicken and vegetables to the saucy pan, stir until heated through.</li>
+        <li>Serve with hot rice or noodles.</li>
+        <li>Enjoy!</li>
+
+    </ol>
 </body>
 </html>
